# anti-uav-yolo

./: .gitignore  README.md  pyproject.toml
anti_uav_yolo/: __init__.py  convert_files.py
tests/: test_anti_uav_yolo.py
